--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "keywords": ["framework", "php", "hubzero"],
     "license": "MIT",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "symfony/http-foundation": "2.5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
