--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
+        "phpunit/dbunit": "1.4.*",
         "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
