--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,17 @@
     "require-dev": {
         "phpunit/phpunit": "4.*",
         "phpunit/dbunit": "1.4.*",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+        "squizlabs/php_codesniffer": "2.*",
+        "jakub-onderka/php-parallel-lint": "0.9.*",
+        "hubzero/standards": "dev-master"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/hubzero/phpcs-standards"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Hubzero\\": "src/"
