--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install: composer install --prefer-source --no-interaction
 script:
   - mkdir -p build/logs
   - vendor/bin/phpunit
-  - vendor/bin/phpcs -n --standard=vendor/hubzero/standards/Php/ruleset.xml src/
+  - vendor/bin/phpcs -np --standard=vendor/hubzero/standards/Php/ruleset.xml src/
   - vendor/bin/parallel-lint src/
 
 after_script:
