--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require-dev": {
         "phpunit/phpunit": "4.*",
         "phpunit/dbunit": "1.4.*",
-        "satooshi/php-coveralls": "dev-master",
+        "satooshi/php-coveralls": "1.0.*",
         "squizlabs/php_codesniffer": "2.*",
         "jakub-onderka/php-parallel-lint": "0.9.*",
         "hubzero/standards": "dev-master",
