--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "squizlabs/php_codesniffer": "2.*",
         "jakub-onderka/php-parallel-lint": "0.9.*",
         "hubzero/standards": "dev-master",
-        "mockery/mockery": "dev-master"
+        "mockery/mockery": "0.9.*"
     },
     "repositories": [
         {
