--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.0",
+        "symfony/yaml": "2.5.*",
         "symfony/http-foundation": "2.5.5"
     },
     "require-dev": {
