--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "squizlabs/php_codesniffer": "2.*",
         "jakub-onderka/php-parallel-lint": "0.9.*",
         "hubzero/standards": "dev-master",
+        "composer/composer": "^1.5",
         "mockery/mockery": "0.9.*"
     },
     "repositories": [
