--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": ">=5.4.0",
         "symfony/yaml": "2.5.*",
-        "symfony/http-foundation": "2.5.5"
+        "symfony/http-foundation": "2.5.5",
+        "composer/composer": "1.6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
@@ -15,7 +16,7 @@
         "squizlabs/php_codesniffer": "2.*",
         "jakub-onderka/php-parallel-lint": "0.9.*",
         "hubzero/standards": "dev-master",
-        "composer/composer": "^1.5",
+        "composer/composer": "1.6.2",
         "mockery/mockery": "0.9.*"
     },
     "repositories": [
