[test] Adding more tests, some minor fixes

--- a/src/Config/Tests/Files/test.ini
+++ b/src/Config/Tests/Files/test.ini
@@ -11,6 +11,10 @@ sef_suffix=0
 sef_groups=0
 feed_limit=10
 feed_email="author"
+bad value
+gzip=true
+unicodeslugs=false
+version=2.2
 
 [seo]
 sef=1
