--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "symfony/yaml": "2.5.*",
         "symfony/http-foundation": "2.5.5",
         "composer/composer": "1.6.3",
-        "phpoffice/phpspreadsheet": "1.4.1"
+        "phpoffice/phpspreadsheet": "1.4.1",
+        "firebase/php-jwt": "5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
