--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "symfony/yaml": "2.5.*",
         "symfony/http-foundation": "2.5.5",
         "composer/composer": "1.6.3",
+        "firebase/php-jwt": "5.0.0",
         "phpoffice/phpspreadsheet": "1.4.1"
     },
     "require-dev": {
