--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ php:
   - 5.6
   - 7.0
 
+cache:
+  directories:
+    - $HOME/.composer/cache/files
+
 before_install: composer self-update
 
-install: composer install --prefer-source --no-interaction
+install: composer install --prefer-dist --no-interaction
 
 script:
   - mkdir -p build/logs
